--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,21 @@
 {
-    "development": {
-        "user": "root",
-        "password": "password",
-        "database": "burgeregrub_db",
-        "host": "localhost",
-        "port": 3306
-    }
+  "development": {
+    "username": "root",
+    "password": "password",
+    "database": "burger_db",
+    "host": "127.0.0.1",
+    "dialect": "mysql",
+    "operatorsAliases": false
+  },
+  "test": {
+    "username": "root",
+    "password": null,
+    "database": "database_test",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
+  },
+  "production": {
+    "use_env_variable": "JAWSDB_URL",
+    "dialect": "mysql"
+  }
 }
