--- a/config/config.json
+++ b/config/config.json
@@ -9,8 +9,8 @@
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
+    "password": "password",
+    "database": "burger_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
